--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -20,4 +20,5 @@
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
+  <button class="phone-btn" bindgetphonenumber="getPhoneNumber" open-type="getPhoneNumber"></button>
 </view>
