--- a/pages/automator/automator.wxml
+++ b/pages/automator/automator.wxml
@@ -1,6 +1,11 @@
 <!-- pages/automator/automator.wxml -->
 <view class="page">
  <view class="cell">
+  <button class="btn" id="click-request-btn" data-click="on-tap-request" type="primary" bindtap="onTapRequest">
+   点击发请求
+  </button>
+ </view>
+ <view class="cell">
   <button class="btn" id="click-err-btn" data-click="on-tap-err" type="primary" bindtap="onTapError">
    点击js报错
   </button>
@@ -16,9 +21,7 @@
   </button>
  </view>
  <view class="cell">
-  <button class="btn" type="primary" data-click="on-to-route" bindtap="onTapRoute">
-   跳转到首页
-  </button>
+  <button class="btn" type="primary" data-click="on-to-route" bindtap="onTapRoute">跳转到首页</button>
  </view>
  <view class="cell">
   <button class="btn" type="primary" data-click="on-rediret-route" bindtap="onTapRediretRoute">
